# perm_ai

./: README.md  pyproject.toml
src/perm_ai/: __init__.py  cycles.py
